@@ -32,4 +32,5 @@ BUGFIXES:
 015 ==> 374464 - Can start print wizzard.
 016 ==> 316687 - ImageMagick-6.8.3.9 could not be found.
 017 ==> 305137 - wish for integrated(?) clip-generator.
-018 ==> 
+018 ==> 404821 - Presentation offset from full screen when OpenGL transitions selected.
+019 ==> 
